[package]
name = "skifree-rs"
version = "1.0.0"
edition = "2021"
authors = ["Trevor Arjeski <tmarjeski@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1"
ggez = { version = "0.9.3", default-features = false }
rand = "0.8.5"

[build-dependencies]
ggez = "0.9.3"
quote = "1"
